[gd_scene load_steps=2 format=3 uid="uid://c83eip7q8t7nx"]

[ext_resource type="Script" path="res://scenes/ui/garage_managament_menu/car_storage_menu/car_storage_menu.gd" id="1_gxlfu"]

[node name="CarStorageMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxlfu")

[node name="OptionsScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="Control" parent="OptionsScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsScreen/VBoxContainer/Top"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CenterContainer" type="CenterContainer" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control/MarginContainer/Panel/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="CashLabel" type="Label" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control/MarginContainer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CASH: $ 9,999,999,999"

[node name="RepLabel" type="Label" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control/MarginContainer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "REP: 999,999,999,999"

[node name="MechanicsCountLabel" type="Label" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer/Control/MarginContainer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "MECHANICS: 999/999"

[node name="Control2" type="Control" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Control3" type="Control" parent="OptionsScreen/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Middle" type="Control" parent="OptionsScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="MarginContainer" type="MarginContainer" parent="OptionsScreen/VBoxContainer/Middle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Control" type="Control" parent="OptionsScreen/VBoxContainer/Middle/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="OptionsScreen/VBoxContainer/Middle/MarginContainer/Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 200.0
grow_vertical = 0

[node name="Label" type="Label" parent="OptionsScreen/VBoxContainer/Middle/MarginContainer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Car Storage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="OptionsScreen/VBoxContainer/Middle/MarginContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -23.0
offset_right = 315.0
grow_horizontal = 2
grow_vertical = 0
text = "MESSAGE MESSAGE MESSAGE MESSAGE MESSAGE MESSAGE MESSAGE MESSAGE "
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="OptionsScreen/VBoxContainer/Middle/MarginContainer/Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "<"

[node name="Menu" type="Control" parent="OptionsScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="OptionsScreen/VBoxContainer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="OptionsScreen/VBoxContainer/Menu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="OptionsScreen/VBoxContainer/Menu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsScreen/VBoxContainer/Menu/Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsScreen/VBoxContainer/Menu/Control/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timers" type="Node" parent="."]

[node name="MessageLabelTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="pressed" from="OptionsScreen/VBoxContainer/Middle/MarginContainer/Control/BackButton" to="." method="_on_back_button_pressed"]
